# cubic-multivar-spline

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  conversations.txt  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
docs/: conf.py  index.rst  requirements.txt
docs/autodoc/: spline.rst  spline1d.rst  spline1dtorch.rst  splinetorch.rst
docs/pages/: aicontrib.rst  boundary2d.rst  boundary3d.rst  examples.rst  quickstart.rst
src/cubic_multivar_spline/: Spline.py  Spline1D.py  Spline2D.py  SplineTest.py  __init__.py  spline_eval.py
src/cubicmultispline/: Spline.py  Spline1D.py  SplineTest.py  TorchSpline.py  TorchSpline1D.py  __init__.py
tests/: conftest.py  demo_first-second-3d.py  demo_first-second-peri.py  demo_not-a-knot.py  run_tests.py  test_1d_accuracy.py  test_1d_bc.py  test_1d_boundary.py  test_1d_reference.py  test_2d_accuracy.py  test_2d_orig.py  test_2d_periodic.py  test_3d_accuracy.py  test_basic.py  test_functions.py  test_nd_accuracy.py  test_performance.py  test_torch_accuracy.py  test_torch_performance.py  test_torch_specific.py
tests/demos/: demo_first-second-peri.py
