[metadata]
name = cubic-multivar-spline
version = 0.1.0
description = Cubic multivariate spline utilities
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License 2.0
author = 
author_email = 
url = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scipy

package_dir =
    = src

[options.packages.find]
where = src
